--- a/css/book-desc.css
+++ b/css/book-desc.css
@@ -97,6 +97,12 @@ nav > li {
     width: 250px;
     height: 400px;
     padding: 1rem;
+    text-align: center;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; */
+    
 }
 
 .book-info > img {
@@ -108,7 +114,7 @@ nav > li {
     display: flex;
     margin: 1rem 0;
     height: auto;
-    width: 250px;
+    width: 450px;
 }
 
 .rating > p > span {
@@ -120,6 +126,8 @@ nav > li {
     padding: 1rem 1.5rem;
     border-radius: 25px;
     border: none;
+    font-size: 1.5rem;
+    margin: 0 auto;
 }
 
 /* Section: Full Description */
