--- a/css/account-create.css
+++ b/css/account-create.css
@@ -4,10 +4,6 @@
     box-sizing: border-box;
 }
 
-body {
-
-}
-
 nav {
     display: flex;
     justify-content: space-around;
@@ -127,10 +123,11 @@ textarea {
     width: 100%;
 }
 
-input[type=submit] {
+button[type=submit] {
     padding: 0.75rem 1rem;   
     border: none;
     width: 30%;
+    cursor: pointer;
 }
 
 span {
